# BottlePackChecker

./: .gitignore  CMakeLists.txt  vcpkg.json
bottleTipCheck/: CMakeLists.txt  main.cpp
bottleTipCheck/include/: CheckBottleCap.h  paths.h  utils.h
bottleTipCheck/src/: CheckBottleCap.cpp  paths.cpp  utils.cpp
